labs/lab2/testsuite/bad/return_void_int.cc
void foo() {
  return 56;
}

int main () {
  foo();
  return 5;
}